[package]
edition = "2021"
name = "stm32wba"
version = "0.1.0"
description = "Device support crates for STM32WB devices"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", optional = true }
defmt = { version = "0.3.5", optional = true }
vcell = "0.1.3"
portable-atomic = { version = "1", default-features = false, optional = true }

[package.metadata.docs.rs]
features = ['atomics', 'critical-section', 'defmt', 'rt', 'stm32wb55a']
default-target = "thumbv8m.main-none-eabihf"
targets = []

[features]
default = ["critical-section", "rt"]
rt = ["cortex-m-rt/device"]
atomics = ["dep:portable-atomic"]
stm32wba55 = []